testdata/e2e/quick-start/delete/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: delete
spec:
  steps:
  - try:
    - apply:
        resource:
          apiVersion: v1
          kind: ConfigMap
          metadata:
            name: quick-start
          data:
            foo: bar
    - delete:
        ref:
          apiVersion: v1
          kind: ConfigMap
          name: quick-start
